Change title font style to test fix for double lettering issue on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -35,7 +35,7 @@ a:link { text-decoration: none; }
 
 #title {
   text-align: center;
-  font-family: 'Amatic SC', cursive;
+  font-family: 'Amatic SC', bold;
   color: #ff8600;
   font-size: 6em;
   font-weight: bold;
